environments/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sri-app-ingress
  namespace: sri-prod
spec:
  # This ensures the Production Ingress Controller picks up the resource
  ingressClassName: nginx 
  rules:
  - host: sri-app.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sri-app-service
            port:
              number: 80
